--- a/mango.html
+++ b/mango.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
-    <head>
-<style>
+           <head>
+                <style>
            body{
                        font-family: 'Poppins', 'Segeo UI', sans-serif;
                        line-height: 1.6;
@@ -9,20 +9,20 @@
                        padding: 0;
                        background-color: white;
                        color: #333;
-                       }
+                  }
            header{
                        text-align: center;
                        padding: 1rem 0;
                        background-color:rgb(253, 187, 8);
                        color: white;
             	  }
-        h1, h2{
+          h1, h2{
                        color: rgb(230, 81, 0);
-                       }
-        h1{
+                 }
+          h1{
                           font-size: 40px;
-        }               
-         main{
+                }               
+          main{
                       padding: 20px;
                       max-width: 900px;
                       margin: auto;
@@ -95,11 +95,11 @@
     </head>
     <body><header>
         <h1 class="milkshake">Classic Mango Milkshake</h1></header>
-<main>
-<section>
+    <main>
+    <section>
         <p class="intro">A refreshing mango milkshake is a perfect treat, especially in warmer weather! Here's a simple recipe to make one:</p>
         <img src="shake.JPG" alt="Mango Milkshake" class="image">
-<br><br><br><button class="tips">Tips</button><button class="rec">Recipe</button></section><section>
+             <br><br><br><button class="tips">Tips</button><button class="rec">Recipe</button></section><section>
         <h2 class="ingredients">Ingredients:</h2>
         <ul class="ing">
             <li><b>2 </b>ripe mangoes (about <b>1.5 to 2 cups</b> chopped mango)</li>
@@ -113,8 +113,10 @@
             <li>A pinch of ground cardamom or saffron strands</li>
             <li>A slice of fresh mango or mint leaves</li>
             </ul>
-            </ul></section>
-      <section>  <ol class="i"><h2 class="instruct">Instructions:</h2>
+        </ul>
+      </section>
+      <section>  
+        <ol class="i"><h2 class="instruct">Instructions:</h2>
             <li><h4>Prepare the mangoes:</h4>Wash, peel, and chop the mangoes into small pieces. Discard the pit.</li>
             <li><h4>Blend:</h4>Add the chopped mango pieces to a blender.</li>
             <li><h4>Add liquids and sweetener:</h4>Pour in the chilled milk and add your chosen sweetener. If you're using ice cubes, add them now.</li>
@@ -156,7 +158,7 @@
         </ul>
         <p class="conclude">Feel free to experiment with these variations to find your perfect mango milkshake recipe!</p></section></main>
 <footer>
-<p>&copy; 2025 Haalim Recipe Website. All rights reserved.</p>
+        <p>&copy; 2025 Haalim Recipe Website. All rights reserved.</p>
 </footer>
     </body>
 </html>
