--- a/mango.html
+++ b/mango.html
@@ -1,164 +1,129 @@
 <!DOCTYPE HTML>
-<html lang="en">
-           <head>
-                <style>
-           body{
-                       font-family: 'Poppins', 'Segeo UI', sans-serif;
-                       line-height: 1.6;
-                       margin: 0;
-                       padding: 0;
-                       background-color: white;
-                       color: #333;
-                  }
-           header{
-                       text-align: center;
-                       padding: 1rem 0;
-                       background-color:rgb(253, 187, 8);
-                       color: white;
-            	  }
-          h1, h2{
-                       color: rgb(230, 81, 0);
-                 }
-          h1{
-                          font-size: 40px;
-                }               
-          main{
-                      padding: 20px;
-                      max-width: 900px;
-                      margin: auto;
-                      background: white;
-                      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-                      margin-top: 20px;
-                      }
-        section{
-                          margin-bottom: 20px;
-                          padding: 15px;
-                          border: 1px solid #ddd;
-                          border-radius: 8px;
-                          background-color: #fff;   
+<html lang='en'>
+<head>
+    <title>Mango Milkshake Magic!</title>
+    <style>
+        body {
+            background-color: rgb(250, 245, 220);
+            font-family: sans-serif;
+            color: rgb(80, 40, 0);
+            margin: 0px;
+            padding: 0px;
+            text-align: center; 
         }
-        image{
-                          max-width: 100%;
-                          height: auto;
-                          display: block;
-                          margin: 15px auto;
-                          border-radius: 5px;
-        }   
-        h4{
-                          color: rgb(207, 82, 15);
-                          font-size: 20px;
-           }
-      .tips{
-                   background-color: rgb(255, 255, 255) ;
-                  color: rgb(255, 152, 0);
-                  font-size: 20px;
-                  border-radius: 10px;
-                  border-color: rgb(255, 152, 0); 
-                  padding: 10px 20px;
-                  margin-right: 30px;
-                  margin-left: 300px;
-                  cursor: pointer;
+h1 {
+            color: rgb(255, 170, 0); 
+            font-size: 58px;
+            padding: 30px;
+            background-color: rgb(255, 255, 255); 
+            border-radius: 20px; 
+            margin: 30px auto; 
+            width: 85%; 
+            max-width: 950px; 
+            text-align: center;
         }
-       .rec{
-                   background-color: rgb(255, 255, 255) ;
-                  color: rgb(255, 152, 0);
-                  font-size: 20px;
-                  border-radius: 10px;
-                  border-color: rgb(255, 152, 0); 
-                  padding: 10px 20px;
-                  margin-left: 30px;
-                  cursor: pointer;
+h2 {
+            color: rgb(230, 130, 0); 
+            font-size: 40px;
+            margin: 45px 0px 25px 0px; 
+            text-align: center;
         }
-        ul, ol{
-                          list-style-type: disc;
-                          margin-left: 20px;
-                          padding: 0;
-        }           
-        ol{
-                            list-style-type: decimal;
+h3 {
+            color: rgb(180, 100, 0); 
+            font-size: 28px;
+            margin: 20px 0px 10px 0px;
+            text-align: center;
         }
-        li{
-                            margin-bottom: 8px;
+p {
+            font-size: 20px;
+            line-height: 1.8; 
+            margin: 18px auto; 
+            width: 80%; 
+            max-width: 780px;
+            text-align: center;
         }
-        footer{
-                            text-align: center;
-                            padding: 20px;
-                            background-color: rgb(51, 51, 51);
-                            color: white;
-                            margin-top: 20x;
+img {
+            width: 100%;
+            max-width: 500px;
+            height: auto; 
+            border-radius: 30px; 
+            margin: 30px auto;
+            display: block; 
         }
-       .conclude{
-                            text-align: center;
+ul, ol {
+            list-style: none; 
+            padding: 0px;
+            margin: 35px auto;
+            width: 80%;
+            max-width: 700px;
+            background-color: rgb(255, 255, 245);
+            border-radius: 25px;
+            padding: 30px; 
+            text-align: left; 
         }
-         </style>
-<title>Mango Milkshake</title>
-    </head>
-    <body><header>
-        <h1 class="milkshake">Classic Mango Milkshake</h1></header>
-    <main>
-    <section>
-        <p class="intro">A refreshing mango milkshake is a perfect treat, especially in warmer weather! Here's a simple recipe to make one:</p>
-        <img src="shake.JPG" alt="Mango Milkshake" class="image">
-             <br><br><br><button class="tips">Tips</button><button class="rec">Recipe</button></section><section>
-        <h2 class="ingredients">Ingredients:</h2>
-        <ul class="ing">
-            <li><b>2 </b>ripe mangoes (about <b>1.5 to 2 cups</b> chopped mango)</li>
-            <li><b>1 to 1.5 cups</b> chilled milk (dairy or a dairy-free alternative like almond, soy, or coconut milk)</li>
-            <li><b>1-2 tablespoons</b> sugar, honey, or your preferred sweetener (adjust to taste, depending on the sweetness of your mangoes)</li>
-            <li><b>3-4</b> ice cubes (optional, for extra chill and thickness)</li>
-            <li>Optional Garnishes</li>
-            <ul class="garnish">
-            <li>Chopped almonds or pistachios</li>
-            <li>Whipped Cream</li>
-            <li>A pinch of ground cardamom or saffron strands</li>
-            <li>A slice of fresh mango or mint leaves</li>
-            </ul>
-        </ul>
-      </section>
-      <section>  
-        <ol class="i"><h2 class="instruct">Instructions:</h2>
-            <li><h4>Prepare the mangoes:</h4>Wash, peel, and chop the mangoes into small pieces. Discard the pit.</li>
-            <li><h4>Blend:</h4>Add the chopped mango pieces to a blender.</li>
-            <li><h4>Add liquids and sweetener:</h4>Pour in the chilled milk and add your chosen sweetener. If you're using ice cubes, add them now.</li>
-            <li><h4>Blend until smooth:</h4>Blend on high speed until the mixture is completely smooth and creamy, with no mango chunks remaining. If you prefer a thinner milkshake, add a little more milk and blend again. For a thicker shake, use less milk or use frozen mango chunks.</li>
-            <li><h4>Taste and adjust:</h4>Taste the milkshake and adjust the sweetness if needed.</li>
-            <li><h4>Serve:</h4>Pour the mango milkshake into serving glasses.</li>
-            <li><h4>Garnish (optional):</h4>Garnish with your desired toppings like chopped nuts, whipped cream, or a sprinkle of cardamom.</li>
-            <li><h4>Enjoy immediately!</h4>Mango milkshakes are best served fresh.</li>
-        </ol></section><section>
-        <h2 class="tips">Tips for the Best Mango Milkshake:</h2>
-        <ul class="t">
-            <li><h4>Choose ripe mangoes:</h4>The key to a delicious mango milkshake is using sweet, ripe mangoes. <i>Alphonso, Kesar, Sindhri, or Dasheri</i> varieties are often recommended for their flavor and less fibrous texture.</li>
-            <li><h4><h4>Chill your ingredients:</h4>Using <i>chilled milk and pre-chilled or even frozen mango pieces</i> will result in a colder and thicker milkshake</li>
-            <li><h4>Adjust sweetness:</h4>The amount of sweetener needed will depend on how sweet your mangoes are. Start with a small amount and add more as desired.</li>
-            <li><h4>For extra richness:</h4>Add a <i>scoop of vanilla or mango ice cream</i> to the blender for a richer, creamier milkshake. If you do this, you might need less sugar.</li>
-            <li><h4>Flavor variations:</h4>A <i>tiny pinch of ground cardamom</i> or a <i>few saffron strands</i> can add a lovely aromatic touch.</li>
-        </ul>
-        <p class="e">Enjoy your delicious mango milkshake! It's a perfect way to cool down and enjoy the tropical flavors of mangoes.</p></section><section>
-        <h2 class="nutrition">Nutrition Information (per serving, approx.):</h2>  
-        <ul class="nu">
-            <li><u>Calories</u>: 250-300 (depending on the amount of sweetener and milk used)</li>
-            <li><u>Protein:</u> 6-8g</li>
-            <li><u>Carbohydrates:</u> 45-50g</li>
-            <li><u>Fat:</u> 5-10g (if using whole milk or adding ice cream)</li>
-            <li><u>Fiber:</u> 2-3g</li>
-            <li><u>Vitamins:</u> Rich in Vitamin A and C from the mangoes</li>
-            <li><u>Minerals:</u> Contains calcium (from milk) and potassium (from mangoes)</li>
-        </ul>
-        <p class="n"><u>Note:</u> Nutrition values can vary based on the specific ingredients and quantities used.</p></section><section>
-        <h2 class="store">Storage:</h2>
-        <p class="s">Mango milkshakes are best enjoyed fresh, but if you have leftovers, you can store them in the refrigerator for up to 24 hours. Stir well before consuming, as separation may occur. For longer storage, consider freezing the milkshake in an airtight container for up to a month. Thaw in the refrigerator and blend again before serving.</p></section><section>
-        <h2 class="var">Variations:</h2>
-        <ul class="v">
-            <li><h4>Vegan Mango Milkshake:</h4>Use <b>coconut milk or almond milk</b> instead of dairy milk and a plant-based sweetener.</li>
-            <li><h4>Spiced Mango Milkshake:</h4>Add a <b>pinch of cinnamon or nutmeg</b> for a warm spice flavor.</li>
-            <li><h4>Chocolate Mango Milkshake:</h4>Add a <b>tablespoon of cocoa powder</b> or<b> chocolate syrup</b> for a chocolatey twist.</li>
-            <li><h4>Green Mango Milkshake:</h4>Use <b>unripe mangoes</b> for a tangy version, adjusting the sweetness accordingly.</li>
-            <li><h4>Protein Mango Milkshake:</h4>Add a <b>scoop of protein powder</b> for an extra protein boost, making it a great post-workout drink.</li>
-        </ul>
-        <p class="conclude">Feel free to experiment with these variations to find your perfect mango milkshake recipe!</p></section></main>
-<footer>
-        <p>&copy; 2025 Haalim Recipe Website. All rights reserved.</p>
-</footer>
-    </body>
+li {
+            font-size: 19px;
+            margin-bottom: 15px; 
+            color: rgb(100, 50, 0); 
+        }
+button {
+            background-color: rgb(255, 120, 0); 
+            color: rgb(255, 255, 255); 
+            font-size: 24px; 
+            padding: 20px 40px; 
+            border-radius: 35px; 
+            margin: 50px auto;
+            width: auto;
+            height: auto;
+            display: block; 
+            text-align: center;
+        }
+b {
+            color: rgb(200, 80, 0); 
+        }
+i {
+            color: rgb(160, 80, 0);
+        }
+u {
+            color: rgb(190, 95, 0); 
+        }
+marquee {
+            background-color: rgb(255, 230, 150); 
+            color: rgb(100, 50, 0);
+            font-size: 25px;
+            padding: 12px 0px;
+            margin-bottom: 25px;
+            border-radius: 8px;
+            width: 100%;
+            text-align: center;
+        }
+ </style>
+</head>
+<body>
+<marquee><u>Experience the Sweetness of Fresh Mango Milkshake!</u></marquee>
+<h1>Mango Milkshake Paradise!</h1>
+<p>Get ready to blend up a taste of sunshine with our incredible mango milkshake recipe! It's the perfect treat for any time of day, offering a burst of tropical flavor that's both<b>refreshing</b> and super delicious.</p>
+<img src="shake.JPG">
+<br>
+<h2>Why Mango Milkshakes Are the Best</h2>
+<p>Mangoes are full of wonderful goodness, and turning them into a milkshake is a fantastic way to enjoy them. It's like a little vacation in a glass! <i>Everyone loves a good mango milkshake!</i></p>
+<h3>What You'll Need to Make It</h3>
+<ul>
+<li><b>2 medium-sized ripe mangoes</b>, peeled, pitted, and diced</li>
+<li>1.5 cups of cold milk (you can use regular, almond, or oat milk!)</li>
+<li>3 tablespoons of sugar or honey (add more or less to your liking)</li>
+<li>A tiny pinch of saffron strands (optional, for a lovely aroma)</li>
+<li>A few ice cubes for extra chill</li>
+</ul>
+<h2>How to Create Your Delicious Drink</h2>
+<ol>
+<li>First, make sure your mangoes are <u>nice and ripe</u> for the best flavor.</li>
+<li>Put the diced mangoes, cold milk, sugar (or honey), and saffron (if using) into your blender.</li>
+<li>Blend until the mixture is completely smooth and creamy. No lumps allowed!</li>
+<li>Add a few ice cubes and blend for another 10-15 seconds until it's super cold and frothy.</li>
+<li>Pour into your favorite glass and enjoy your homemade tropical delight!</li>
+</ol>
+<button>Discover More Fruity Recipes!</button>
+<p>We hope you love your mango milkshake! It's truly a special treat.</p>
+</body>
 </html>
