--- a/mango.html
+++ b/mango.html
@@ -103,7 +103,7 @@ marquee {
 <marquee><u>Experience the Sweetness of Fresh Mango Milkshake!</u></marquee>
 <h1>Mango Milkshake Paradise!</h1>
 <p>Get ready to blend up a taste of sunshine with our incredible mango milkshake recipe! It's the perfect treat for any time of day, offering a burst of tropical flavor that's both<b>refreshing</b> and super delicious.</p>
-<img src="shake.JPG">
+<img src="shake.jpg">
 <br>
 <h2>Why Mango Milkshakes Are the Best</h2>
 <p>Mangoes are full of wonderful goodness, and turning them into a milkshake is a fantastic way to enjoy them. It's like a little vacation in a glass! <i>Everyone loves a good mango milkshake!</i></p>
