--- a/mango.html
+++ b/mango.html
@@ -48,7 +48,7 @@ img {
             height: auto; 
             border-radius: 30px; 
             margin: 30px auto;
-            display: block; 
+        
         }
 ul, ol {
             list-style: none; 
@@ -75,8 +75,8 @@ button {
             margin: 50px auto;
             width: auto;
             height: auto;
-            display: block; 
             text-align: center;
+            cursor: pointer;
         }
 b {
             color: rgb(200, 80, 0); 
